# schedopt.org

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  template.yml
.github/workflows/: optimizer-tests.yml  retriever-tests.yml
__tests__/: compact.test.js  dynamo.test.js  genClusters.test.js
atlas-samples/: ala223.json  anthrcul101.json  artdes100.json  artdes105.json  artdes150.json  artdes333.json  biology173.json  chem130.json  chem211.json  chem246.json  chem482.json  econ101.json  eecs183.json  eecs203.json  eecs215.json  eecs270.json  eecs280.json  eecs281.json  eecs370.json  eecs376.json  english124.json  engr100.json  engr101.json  engr151.json  history195.json  math115.json  math116.json  math214.json  math216.json  math217.json  matscie220.json  physics140.json  physics141.json  physics150.json  physics240.json  physics241.json  psych111.json  spanish232.json  stats250.json
optimizer/: .gitignore  CMakeLists.txt  CMakePresets.json  array.hpp  main.cpp  preferences.hpp  requirements.hpp  schedule.hpp  search.hpp  test_array.cpp  test_common_courses.hpp  test_preferences.cpp  test_requirements.cpp  test_schedule.cpp  test_search.cpp  test_validators.cpp  validators.hpp  vcpkg.json
schedopt-web/: README.md  package-lock.json  package.json
schedopt-web/src/: utils.js
schedopt-web/src/components/: CanvasPlot.svelte  CurrentHistogram.svelte  CurrentPlot.svelte  ScheduleSetViewer.svelte
schedopt-web/src/routes/: index.svelte  viewer.svelte
soc-samples/: ala101.json  ala223.json  ala421.json  anthrcul101.json  artdes100.json  artdes105.json  artdes150.json  artdes160.json  artdes192.json  artdes205.json  artdes265.json  artdes333.json  biology173.json  chem130.json  chem211.json  chem246.json  chem482.json  econ101.json  eecs183.json  eecs203.json  eecs215.json  eecs270.json  eecs280.json  eecs281.json  eecs370.json  eecs376.json  english124.json  engr100.json  engr101.json  engr151.json  history195.json  history196.json  history200.json  math115.json  math116.json  math214.json  math215.json  math216.json  math217.json  matscie220.json  (+12 more)
src/: buildings.js  compact.js  datetime.js  dynamo.js  genClusters.js  socApi.js
src/handlers/: load-and-validate.js
test/: compact.test.js  dynamo.test.js  genClusters.test.js
